--- a/docker/frontend-deployment.yaml
+++ b/docker/frontend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: kaljmarik/frontend:v1
+          image: kaljmarik/frontend:latest
           ports:
             - containerPort: 80
           env:
