--- a/docker/backend-deployment.yaml
+++ b/docker/backend-deployment.yaml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
         - name: backend
-          image: kaljmarik/backend:v1
+          image: kaljmarik/backend:latest
           ports:
             - containerPort: 3000
           env:
             - name: MONGO_URI
-              value: 'mongodb://mongo:27017/cars' # MongoDB URL for Kubernetes
+              value: 'mongodb://mongo:27017/cars'
 ---
 apiVersion: v1
 kind: Service
