k8s aangepast en gesplits in configmap, services en deployments

--- a/K8s/frontend-deployment.yaml
+++ b/K8s/frontend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: frontend
@@ -19,17 +19,8 @@ spec:
             - containerPort: 80
           env:
             - name: REACT_APP_API_URL
-              value: 'http://backend-service' # Backend service URL in Kubernetes
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-spec:
-  selector:
-    app: frontend
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
+              valueFrom:
+                configMapKeyRef:
+                  name: frontend-config
+                  key: REACT_APP_API_URL
+              #value: 'http://backend-service'
