--- a/K8s/backend-deployment.yaml
+++ b/K8s/backend-deployment.yaml
@@ -19,17 +19,8 @@ spec:
             - containerPort: 3000
           env:
             - name: MONGO_URI
-              value: 'mongodb://mongo-service:27017/cars'
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend-service
-spec:
-  selector:
-    app: backend
-  ports:
-    - protocol: TCP
-      port: 3000
-      targetPort: 3000
-  type: LoadBalancer
+              valueFrom:
+                configMapKeyRef:
+                  name: backend-config
+                  key: MONGO_URI
+              #value: 'mongodb://mongo-service:27017/cars'
