--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,6 @@ FROM node:16 AS build
 
 WORKDIR /app
 
-# Set build-time argument for API URL
-ARG REACT_APP_API_URL
-
 # Install dependencies
 COPY package*.json ./
 RUN npm install
@@ -13,20 +10,20 @@ RUN npm install
 # Copy the rest of the app
 COPY . .
 
-# Set the environment variable for React during the build process
-ENV REACT_APP_API_URL=${REACT_APP_API_URL}
-
-# Build the app for production
+# Build the React app for production
 RUN npm run build
 
-# Serve the app using nginx
+# Use NGINX to serve the app
 FROM nginx:alpine
 
-# Copy build output to Nginx's default static file directory
+# Copy the build output from React into NGINX's static directory
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Expose port 80 for serving the app
+# Copy the custom NGINX config file into the NGINX container
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Expose port 80
 EXPOSE 80
 
-# Start Nginx
+# Start NGINX
 CMD ["nginx", "-g", "daemon off;"]
