--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,42 +4,48 @@ services:
   backend:
     image: kaljmarik/backend
     build:
-      context: ./backend  # Build from the backend folder
-      dockerfile: Dockerfile  # Use Dockerfile in the backend folder
-    ports:
-      - "3000:3000"  # Expose backend port to localhost
+      context: ./backend
+      dockerfile: Dockerfile
     environment:
-      - MONGO_URI=mongodb://db:27017/cars  # MongoDB connection string, pointing to the 'db' service
+      - MONGO_URI=mongodb://db:27017/cars
     depends_on:
-      - db  # Ensure the database is started before the backend
+      - db
     networks:
-      - backend-network  # Connect to the same network as other services
+      - backbone
+
+  db:
+    image: mongo:latest
+    volumes:
+      - ./data/db:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - backbone
 
   frontend:
     image: kaljmarik/frontend
     build:
       context: ./frontend  # Build from the frontend folder
       dockerfile: Dockerfile  # Use Dockerfile in the frontend folder
-      args:
-        REACT_APP_API_URL: http://localhost:3000  # Pass the backend URL during the build process
     ports:
-      - "80:80"  # Expose frontend port to localhost
+      - "80:80"
     depends_on:
       - backend  # Ensure backend is started before frontend
-    environment:
-      - REACT_APP_API_URL=http://localhost:3000
     networks:
-      - backend-network  # Connect to the same network as other services
+      - backbone  # Connect to the same network as other services
 
-  db:
-    image: mongo:latest  # Use the official MongoDB image
+  proxy:
+    image: nginx:latest
     volumes:
-      - ./data/db:/data/db  # Persist database data on local machine
+      - ./frontend/build:/usr/share/nginx/html  # Mount the React build folder
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf  # Mount the custom Nginx config
     ports:
-      - "27017:27017"  # Expose MongoDB port to localhost
+      - "3001:80"  # Expose Nginx on port 80
+    depends_on:
+      - backend  # Ensure backend is started before Nginx
     networks:
-      - backend-network  # Connect to the same network as other services
+      - backbone
 
 networks:
-  backend-network:
-    driver: bridge  # Set up a network so services can communicate with each other
+  backbone:
+    driver: bridge
