--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,23 @@
-server {
-  listen 80;
-  server_name localhost;
+events {
+  worker_connections 1024;
+}
 
-  # Inject the API URL into the page dynamically
-  location / {
-    # Inject the API URL via environment variable
-    set $API_URL $http_API_URL;
-    
-    # Modify the index.html dynamically to inject the API URL
-    sub_filter 'REACT_APP_API_URL_PLACEHOLDER' $API_URL;
-    sub_filter_once off;
+http {
+  server {
+    listen 80;
 
-    root /usr/share/nginx/html;
-    try_files $uri /index.html;
+    # Serve the static files from React build
+    location / {
+      root /usr/share/nginx/html;
+      try_files $uri /index.html;
+    }
+
+    location /api/ {
+        proxy_pass http://backend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
   }
 }
