--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,8 +27,8 @@ services:
     build:
       context: ./frontend  # Build from the frontend folder
       dockerfile: Dockerfile  # Use Dockerfile in the frontend folder
-    ports:
-      - "80:80"
+    #ports:
+    #  - "80:80"
     depends_on:
       - backend  # Ensure backend is started before frontend
     networks:
@@ -37,10 +37,10 @@ services:
   proxy:
     image: nginx:latest
     volumes:
-      - ./frontend/build:/usr/share/nginx/html  # Mount the React build folder
+      - ./frontend/build:/usr/share/nginx/html 
       - ./frontend/nginx.conf:/etc/nginx/nginx.conf  # Mount the custom Nginx config
     ports:
-      - "3001:80"  # Expose Nginx on port 80
+      - "80:80"  # Expose Nginx on port 80
     depends_on:
       - backend  # Ensure backend is started before Nginx
     networks:
