--- a/K8s/services.yaml
+++ b/K8s/services.yaml
@@ -23,7 +23,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: ClusterIP # Expose frontend service externally via a LoadBalancer
+  type: LoadBalancer # Expose frontend service externally via a LoadBalancer
 
 ---
 apiVersion: v1
@@ -35,20 +35,6 @@ spec:
     app: backend
   ports:
     - protocol: TCP
-      port: 3000
+      port: 80
       targetPort: 3000
   type: ClusterIP
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
