--- a/Helm/templates/deployment-frontend.yaml
+++ b/Helm/templates/deployment-frontend.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: frontend-deployment
 spec:
-  replicas: 1
+  replicas: { { .Values.replicas } }
   selector:
     matchLabels:
       app: frontend
