--- a/Helm/cloudbuild.yaml
+++ b/Helm/cloudbuild.yaml
@@ -3,21 +3,21 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Build Backend'
     dir: 'backend'
-    args: ['build', '-t', 'eu.gcr.io/$PROJECT_ID/backend:latest', '.']
+    args: ['build', '-t', 'eu.gcr.io/myreactapp-445621/backend:latest', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Push Backend'
-    args: ['push', 'eu.gcr.io/$PROJECT_ID/backend:latest']
+    args: ['push', 'eu.gcr.io/myreactapp-445621/backend:latest']
 
   # Step 2: Build and Push Frontend Docker Image
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Build Frontend'
     dir: 'frontend'
-    args: ['build', '-t', 'eu.gcr.io/$PROJECT_ID/frontend:latest', '.']
+    args: ['build', '-t', 'eu.gcr.io/myreactapp-445621/frontend:latest', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
     id: 'Push Frontend'
-    args: ['push', 'eu.gcr.io/$PROJECT_ID/frontend:latest']
+    args: ['push', 'eu.gcr.io/myreactapp-445621/frontend:latest']
 
   # Step 3: Set up kubectl with GKE credentials
   - name: 'gcr.io/cloud-builders/gke-deploy'
@@ -31,7 +31,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud container clusters get-credentials YOUR_CLUSTER_NAME --region europe-west1 --project $PROJECT_ID
+        gcloud container clusters get-credentials cluster-1 --region europe-west1 --project myreactapp-445621
 
   # Step 4: Deploy with Helm
   - name: 'gcr.io/cloud-builders/helm'
@@ -44,13 +44,13 @@ steps:
       - '-f'
       - 'values.yaml'
       - '--set'
-      - 'backend.image=eu.gcr.io/$PROJECT_ID/backend:latest'
+      - 'backend.image=eu.gcr.io/myreactapp-445621/backend:latest'
       - '--set'
-      - 'frontend.image=eu.gcr.io/$PROJECT_ID/frontend:latest'
+      - 'frontend.image=eu.gcr.io/myreactapp-445621/frontend:latest'
 
 images:
-  - 'eu.gcr.io/$PROJECT_ID/backend:latest'
-  - 'eu.gcr.io/$PROJECT_ID/frontend:latest'
+  - 'eu.gcr.io/myreactapp-445621/backend:latest'
+  - 'eu.gcr.io/myreactapp-445621/frontend:latest'
 
 options:
   logging: CLOUD_LOGGING_ONLY
