--- a/Helm/cloudbuild.yaml
+++ b/Helm/cloudbuild.yaml
@@ -33,20 +33,18 @@ steps:
       - 'myreactapp-445621' # Replace with your project ID
 
   # Step 5: Deploy with Helm
-  - name: 'alpine/helm:3.7.0' # Use the official Helm image from Docker Hub
-    id: 'Helm Deploy'
-    entrypoint: 'helm'
-    args:
-      - 'upgrade'
-      - '--install'
-      - 'car-app'
-      - './helm'
-      - '-f'
-      - 'values.yaml'
-      - '--set'
-      - 'backend.image=eu.gcr.io/myreactapp-445621/backend:latest'
-      - '--set'
-      - 'frontend.image=eu.gcr.io/myreactapp-445621/frontend:latest'
+- name: 'alpine/helm:3.7.0'
+  id: 'Helm Deploy'
+  entrypoint: 'sh'
+  args:
+    - '-c'
+    - |
+      apk add --no-cache curl bash
+      curl -sSL https://packages.cloud.google.com/apt/doc/apt-key.gpg | apk add --no-cache gke-gcloud-auth-plugin
+      helm upgrade --install car-app ./helm \
+        -f values.yaml \
+        --set backend.image=eu.gcr.io/myreactapp-445621/backend:latest \
+        --set frontend.image=eu.gcr.io/myreactapp-445621/frontend:latest
 
 images:
   - 'eu.gcr.io/myreactapp-445621/backend:latest'
