--- a/Helm/templates/deployment-backend.yaml
+++ b/Helm/templates/deployment-backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: '{{ .Values.backend.image }}'
+          image: { { .Values.backend.image } }
           ports:
             - containerPort: 3000
           env:
