--- a/Helm/templates/deployment-frontend.yaml
+++ b/Helm/templates/deployment-frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: '{{ .Values.frontend.image }}'
+          image: { { .Values.frontend.image } }
           ports:
             - containerPort: 80
           volumeMounts:
